--- a/billing/index.html
+++ b/billing/index.html
@@ -12,7 +12,7 @@
 	<h1>記帳</h1>
 	<button onclick="window.location.href='html.html'" type="button" id="account" class="btn btn-primary css">記帳</button>
 	<br>
-	<button type="button" id="tenExpense" class="btn btn-primary css">近10筆支出</button>
+	<button onclick="window.location.href='last10.html'" type="button" id="tenExpense" class="btn btn-primary css">近10筆支出</button>
 	<br>
 	<button type="button" id="expense" class="btn btn-primary css">支出</button>
 </body>
