--- a/billing/html.html
+++ b/billing/html.html
@@ -8,16 +8,17 @@
 	<script type="text/javascript" src="JS/account.js"></script>
 	<script type="text/javascript" src="JS/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="CSS/css.css">
 	<link rel="stylesheet" type="text/css" href="CSS/css2.css">
 </head>
 <body>
-	<h1 class="h1">新增支出</h1>
+	<h1 class="css">新增支出</h1>
 	<br>
 	<label>日期:</label>
-	<input type="date" class="css" id="date">
+	<input type="date" class="css2" id="date">
 	<br>
 	<label for="sel1">類別:</label>
-      <select class="css" id="kind">
+      <select class="css2" id="kind">
         <option>食</option>
         <option>衣</option>
         <option>住</option>
@@ -27,10 +28,11 @@
       </select>
 	<br>
 	<label>項目:</label>
-	<input type="text" id="item" class="css">
+	<input type="text" id="item" class="css2">
 	<br>
 	<label>金額:</label>
-	<input type="number" id="cost" class="css">
+	<input type="number" id="cost" class="css2">
+	<br>
 	<button onclick="submit()" class="btn btn-primary css">送出</button>
 </body>
 </html>
