--- a/billing/index.html
+++ b/billing/index.html
@@ -14,6 +14,6 @@
 	<br>
 	<button onclick="window.location.href='last10.html'" type="button" id="tenExpense" class="btn btn-primary css">近10筆支出</button>
 	<br>
-	<button type="button" id="expense" class="btn btn-primary css">支出</button>
+	<button onclick="window.location.href='past.html'" type="button" id="expense" class="btn btn-primary css">支出查詢</button>
 </body>
 </html>
