--- a/billing/index.html
+++ b/billing/index.html
@@ -6,14 +6,18 @@
 	<script type="text/javascript" src="JS/jquery-1.12.2.min.js"></script>
 	<script type="text/javascript" src="JS/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="CSS/css.css">
 </head>
 <body>
-	<h1>記帳</h1>
-	<button onclick="window.location.href='html.html'" type="button" id="account" class="btn btn-primary css">記帳</button>
+	<h1 align="center">記帳 app</h1>
+
+	<button onclick="window.location.href='html.html'" class="btn btn-primary">記帳</button>
 	<br>
-	<button onclick="window.location.href='last10.html'" type="button" id="tenExpense" class="btn btn-primary css">近10筆支出</button>
+
+	<button onclick="window.location.href='last10.html'" class="btn btn-primary">近 10 筆支出</button>
 	<br>
-	<button onclick="window.location.href='past.html'" type="button" id="expense" class="btn btn-primary css">支出查詢</button>
+
+	<button onclick="window.location.href='past.html'" class="btn btn-primary">支出查詢</button>
+	<br>
+
 </body>
 </html>
