--- a/billing/html.html
+++ b/billing/html.html
@@ -8,9 +8,10 @@
 	<script type="text/javascript" src="JS/account.js"></script>
 	<script type="text/javascript" src="JS/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="CSS/css.css">
 </head>
 <body>
-	<h1 class="css">新增支出</h1>
+	<h1 class="title">新增支出</h1>
 	<br>
 	<label>日期:</label>
 	<input type="date" class="css2" id="date">
@@ -31,6 +32,8 @@
 	<label>金額:</label>
 	<input type="number" id="cost" class="css2">
 	<br>
-	<button onclick="submit()" class="btn btn-primary css">送出</button>
+	<div>
+		<button onclick="submit()" class="css3">送出</button>
+	</div>
 </body>
 </html>
