--- a/billing/index.html
+++ b/billing/index.html
@@ -6,18 +6,19 @@
 	<script type="text/javascript" src="JS/jquery-1.12.2.min.js"></script>
 	<script type="text/javascript" src="JS/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="CSS/css.css">
 </head>
 <body>
-	<h1 align="center">記帳 app</h1>
+	<h1 class="title">記帳  APP</h1>
+	<div class="center">
+		<button onclick="window.location.href='html.html'" class="css1">記帳</button>
+		<br>
 
-	<button onclick="window.location.href='html.html'" class="btn btn-primary">記帳</button>
-	<br>
+		<button onclick="window.location.href='last10.html'" class="css1">近 10 筆支出</button>
+		<br>
 
-	<button onclick="window.location.href='last10.html'" class="btn btn-primary">近 10 筆支出</button>
-	<br>
-
-	<button onclick="window.location.href='past.html'" class="btn btn-primary">支出查詢</button>
-	<br>
-
+		<button onclick="window.location.href='past.html'" class="css1">支出查詢</button>
+		<br>
+	</div>
 </body>
 </html>
