--- a/billing/last10.html
+++ b/billing/last10.html
@@ -8,13 +8,14 @@
 	<script type="text/javascript" src="JS/expense.js"></script>
 	<script type="text/javascript" src="JS/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="CSS/css.css">
 </head>
 <body>
-	<h1>近10筆資料</h1>
+	<h1 class="title">近10筆資料</h1>
 
 	<table class="table table-striped">
 		<thead>
-			<tr> 
+			<tr class="css2"> 
 				<td>日期</td>
 				<td>項目</td>
 				<td>金額</td>
